         application/xslt+xml (was application/xsd+xml).
         Reported by Jean-Yves Cronier.
       - ObjectRepresentation was closing the outputstream too early 
         instead of simply flushing.
       - Fixed potential IllegalStateException when updating the allowed 
         methods on Resource subclasses. Reported by Micah Whitacre.
    - Misc
       - The Template implementation now uses "\\d" as a regex for the
         Variable.TYPE_DIGIT constant.
         
- 1.1.4 (2009-04-06)
    - Bugs fixed
       - Fixed issue in JettyHandler mixing HTTP and HTTPS requests.
         Reported by Albert Boehmler.
       - When updating a file via the FILE connector, some deletion
         issue could occur on Windows due to JVM integration issues
         with the OS. A workaround to reduce this was to invoke the
         garbage collection. Reported by Kevin Conaway.
       - The CLAP connector didn't set the expiration date based on
         its 'timeToLive' parameter. Reported by Peter Becker.
       - Added dependencies to the fileupload and dbcp modules for 
         OSGi runtime. Reported by Rob Heittman.
       - Fixed "Content-location" header value set by the 
         DirectoryResource when files are served from a CLAP connector. 
         Reported by David Fogel.
       - Fixed starting issue with the range service.
       - Fixed POM generation issue with dependencies release version.
         Reported by Paul Austin. 
       - Fixed selector exhaustion issue with Grizzly connector.
         Reported by Bruce Lee.
       - Fixed content negotiation bug in JAX-RS extension.
         Reported by Fabio Mancinelli.
       - Fixed bug in TunnelService preventing the replacement of 
         client preferences if the HTTP header was "Accept" and not
         "accept".
       - Fixed flushing bug with WriterRepresentation and 
         SaxRepresentation classes. Reported by Tal Liron.
    - Misc