@@ -30,6 +30,10 @@ Changes log
          instead of simply flushing.
        - Fixed potential IllegalStateException when updating the allowed 
          methods on Resource subclasses. Reported by Micah Whitacre.
+       - Fixed issue between Tomcat and Servlet adapter when the 
+         response could be sent too early due to "Content-Length" 
+         header triggering the sending too early. 
+         Reported by Stephen Colebourne. 
     - Misc
        - The Template implementation now uses "\\d" as a regex for the
          Variable.TYPE_DIGIT constant.
